fix(kit): `ProgressCircle` mobile safari bug with overflow

--- a/projects/kit/components/progress/progress-circle/progress-circle.style.less
+++ b/projects/kit/components/progress/progress-circle/progress-circle.style.less
@@ -88,3 +88,8 @@
     top: 50%;
     left: 50%;
 }
+
+.svg {
+    overflow-x: unset;
+    overflow-y: unset;
+}
